[workspace]

members = ["libraries/*", "binaries/*"]
resolver = "3"

[workspace.package]
version = "0.2.33"
repository = "https://github.com/geph-official/geph5"
license = "ISC"


[patch.crates-io]
#smolscale = { path = "../smolscale" }


[profile.release]
panic = "abort"
debug = 1

[profile.dev]
panic = "abort"
opt-level = 1

[profile.dev.package.num-bigint-dig]
opt-level = 3


[profile.release-dbg]
inherits = "dev"
opt-level = 3
