[workspace]

members = ["libraries/*", "binaries/*"]
resolver = "2"

[workspace.package]
version = "0.2.75"
repository = "https://github.com/geph-official/geph5"
license = "ISC"


[patch.crates-io]
# ipstack-geph = { path = "../ipstack-geph" }


[profile.release]
panic = "abort"
debug = 0
overflow-checks = true
lto = "thin"

[profile.dev]
panic = "abort"
opt-level = 1

[profile.dev.package.num-bigint-dig]
opt-level = 3


[profile.release-dbg]
inherits = "dev"
opt-level = 3
