[package]
name = "geph5-app"
edition = "2024"
license = "MPL-2.0"
description = "The Geph5 desktop app: the `geph` CLI and its supervising daemon"
version.workspace = true
repository.workspace = true

[[bin]]
name = "geph5"
path = "src/main.rs"

[dependencies]
geph5-broker-protocol = { version = "0.3", path = "../../libraries/geph5-broker-protocol" }
geph5-misc-rpc = { version = "0.3", path = "../../libraries/geph5-misc-rpc" }
geph5-rt = { path = "../../libraries/geph5-rt" }

nanorpc = "0.1.13"
nanorpc-sillad = { version = "0.1", path = "../../libraries/nanorpc-sillad" }
sillad = { version = "0.2.10", path = "../../libraries/sillad" }

anyhow = "1.0.102"
async-trait = "0.1.89"
blake3 = "1.8.5"
clap = { version = "4.6.1", features = ["derive"] }
isocountry = "0.3.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "1.0.69"
tokio = { version = "1.52", features = ["sync", "signal", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
wintun = "0.5"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Rpc",
    "Win32_System_RemoteDesktop",
    "Win32_System_Registry",
    "Win32_Networking_WinInet",
    "Win32_System_JobObjects",
] }
