[package]
name = "geph5-bridge"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
geph5-misc-rpc = { path = "../../libraries/geph5-misc-rpc" }
picomux = { path = "../../libraries/picomux" }
rand = "0.8.5"
sillad = { path = "../../libraries/sillad" }
sillad-sosistab3 = { path = "../../libraries/sillad-sosistab3" }
smolscale = "0.4.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
geph5-broker-protocol = { path = "../../libraries/geph5-broker-protocol" }
serde = { version = "1", features = ["derive"] }
nanorpc = "0.1.12"
nanorpc-sillad = { path = "../../libraries/nanorpc-sillad" }
async-trait = "0.1.80"
blake3 = "1.5.1"
async-io = "2.3.3"
tap = "1.0.1"
reqwest = { version = "0.12.5", default-features = false, features = [
  "rustls-tls",
  "json"
] }
moka = { version = "0.12.7", features = ["future"] }
anyhow = "1.0.86"
stdcode = "0.1.14"
smol = "2.0.0"
futures-util = { version = "0.3.30", features = ["io"] }
deadpool = "0.12.1"
once_cell = "1.19.0"
dashmap = "6.0.1"
serde_json = "1.0.120"
scopeguard = "1.2.0"
smol-timeout2 = "0.6.1"
async-channel = "2.3.1"
oneshot = "0.1.8"
async-io-bufpool = "0.1.0"
tikv-jemallocator = { version = "0.6.0", features = ["unprefixed_malloc_on_supported_platforms"] }
flate2 = "1.0.35"
clap = "4.5.32"
influxdb-line-protocol = "2.0.0"
nano-influxdb = { path = "../../libraries/nano-influxdb" }

#jemalloc_pprof = "0.6.0"