[package]
name = "geph5-bridge"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
geph5-misc-rpc = { path = "../../libraries/geph5-misc-rpc" }
picomux = { path = "../../libraries/picomux" }
rand = "0.8.5"
sillad = { path = "../../libraries/sillad" }
sillad-sosistab3 = { path = "../../libraries/sillad-sosistab3" }
smolscale = "0.4.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
geph5-broker-protocol = { path = "../../libraries/geph5-broker-protocol" }
serde = { version = "1", features = ["derive"] }
nanorpc = "0.1.13"
nanorpc-sillad = { path = "../../libraries/nanorpc-sillad" }
async-trait = "0.1.88"
blake3 = "1.8.2"
async-io = "2.5.0"
tap = "1.0.1"
reqwest = { version = "0.12.22", default-features = false, features = [
  "rustls-tls",
  "json"
] }
moka = { version = "0.12.10", features = ["future"] }
anyhow = "1.0.98"
stdcode = "0.1.14"
smol = "2.0.2"
futures-util = { version = "0.3.31", features = ["io"] }
deadpool = "0.12.2"
once_cell = "1.21.3"
dashmap = "6.1.0"
serde_json = "1.0.141"
scopeguard = "1.2.0"
smol-timeout2 = "0.6.1"
async-channel = "2.5.0"
oneshot = "0.1.11"
async-io-bufpool = "0.1.2"
tikv-jemallocator = { version = "0.6.0", features = ["unprefixed_malloc_on_supported_platforms"] }
flate2 = "1.1.2"
clap = "4.5.41"
influxdb-line-protocol = "2.0.0"
nano-influxdb = { path = "../../libraries/nano-influxdb" }

#jemalloc_pprof = "0.6.0"