[package]
name = "geph5-bridge"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
geph5-misc-rpc = { path = "../../libraries/geph5-misc-rpc" }
geph5-ip-to-asn = { path = "../../libraries/geph5-ip-to-asn" }
picomux = { path = "../../libraries/picomux" }
rand = "0.8.6"
sillad = { path = "../../libraries/sillad" }
sillad-sosistab3 = { path = "../../libraries/sillad-sosistab3" }
geph5-rt = { path = "../../libraries/geph5-rt" }
tokio = { version = "1.52", features = ["process", "time", "io-util"] }
futures-concurrency = "7.7.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
geph5-broker-protocol = { path = "../../libraries/geph5-broker-protocol" }
serde = { version = "1", features = ["derive"] }
nanorpc = "0.1.13"
nanorpc-sillad = { path = "../../libraries/nanorpc-sillad" }
async-trait = "0.1.89"
blake3 = "1.8.5"
tap = "1.0.1"
reqwest = { version = "0.12.28", default-features = false, features = [
  "rustls-tls",
  "json",
] }
moka = { version = "0.12.15", features = ["future"] }
anyhow = "1.0.102"
stdcode = "0.1.14"
futures-util = "0.3.32"
governor = "0.6.3"
deadpool = "0.12.3"
once_cell = "1.21.4"
dashmap = "6.1.0"
serde_json = "1.0.149"
scopeguard = "1.2.0"
async-channel = "2.5.0"
oneshot = "0.1.13"
tikv-jemallocator = { version = "0.6.1", features = [
  "unprefixed_malloc_on_supported_platforms",
] }
clap = "4.6.1"
geph5-stats = { path = "../../libraries/geph5-stats" }

#jemalloc_pprof = "0.6.0"
