[package]
name = "geph5-broker"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0.96"
axum = { version = "0.8.1", features = ["json"] }
futures-util = "0.3.31"
once_cell = { version = "1.20.3", features = ["parking_lot"] }
pollster = "0.4.0"
serde = "1.0.218"
serde_json = "1.0.139"
serde_yaml = "0.9.34"
smolscale = "0.4.15"
sqlx = { version = "0.8.3", features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
] }
geph5-broker-protocol = { path = "../../libraries/geph5-broker-protocol" }
geph5-misc-rpc = { path = "../../libraries/geph5-misc-rpc" }
async-trait = "0.1.86"
nanorpc = "0.1.13"
thiserror = "2.0.11"
tracing = "0.1.41"
rand = "0.9.0"
async-io = "2.4.0"
moka = { version = "0.12.10", features = ["future"] }
blake3 = "1.6.1"
isocountry = "0.3.2"
ed25519-dalek = { version = "2", default-features = false, features = [
  "serde",
] }
tokio = { version = "1.43", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
nanorpc-sillad = { path = "../../libraries/nanorpc-sillad" }
sillad = { path = "../../libraries/sillad" }
mizaru2 = { path = "../../libraries/mizaru2" }
sillad-sosistab3 = { path = "../../libraries/sillad-sosistab3" }
smol-timeout2 = "0.6.1"
stdcode = "0.1.14"
bytes = { version = "1.10.0", features = ["serde"] }
argon2 = "0.5.3"
rusty_pool = "0.7.0"
oneshot = "0.1.11"
cadence = "1.5.0"
clap = { version = "4.5.31", features = ["derive"] }
reqwest = { version = "0.12.12", default-features = false, features = [
  "json",
  "rustls-tls-webpki-roots",
] }
hex = "0.4.3"
tap = "1.0.1"
blocking = "1.6.1"
cached = { version = "0.54.0", features = ["async"] }
smol = "2.0.2"
