[package]
name = "geph5-broker"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["json"] }
futures-util = "0.3.30"
once_cell = { version = "1.19.0", features = ["parking_lot"] }
pollster = "0.3.0"
serde = "1.0.204"
serde_json = "1.0.120"
serde_yaml = "0.9.34"
smolscale = "0.4.7"
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
] }
geph5-broker-protocol = { path = "../../libraries/geph5-broker-protocol" }
geph5-misc-rpc = { path = "../../libraries/geph5-misc-rpc" }
async-trait = "0.1.80"
nanorpc = "0.1.12"
thiserror = "1.0.61"
tracing = "0.1.40"
rand = "0.8.5"
async-io = "2.3.3"
moka = { version = "0.12.7", features = ["future"] }
blake3 = "1.5.1"
isocountry = "0.3.2"
ed25519-dalek = {version="2", default-features=false, features=["serde"]}
tokio = { version = "1.38", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
nanorpc-sillad = { path = "../../libraries/nanorpc-sillad" }
sillad = { path = "../../libraries/sillad" }
mizaru2 = { path = "../../libraries/mizaru2" }
sillad-sosistab3 = { path = "../../libraries/sillad-sosistab3" }
smol-timeout2 = "0.6.0"
stdcode = "0.1.14"
bytes = { version = "1.6.0", features = ["serde"] }
argon2 = "0.5.3"
rusty_pool = "0.7.0"
oneshot = "0.1.8"
cadence = "1.4.0"
clap = { version = "4.5.8", features = ["derive"] }
reqwest = { version = "0.12.5", default-features = false, features=["json", "rustls-tls-webpki-roots"] }
hex = "0.4.3"
tap = "1.0.1"
blocking = "1.6.1"
cached = {version="0.54.0", features=["async"]}
smol = "2.0.2"
influxdb-line-protocol = "2.0.0"
nano-influxdb = { path = "../../libraries/nano-influxdb" }
tikv-jemallocator = "0.6.0"