[package]
name = "geph5-client-android"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pollster = "0.2"

# For some reason logging within the egui crate isn't working, even with
# the log feature. Maybe the android_logger crate is broken?
egui = { git = "https://github.com/ArthurBrussee/egui/", branch = "winit-update" }

egui-wgpu = { git = "https://github.com/ArthurBrussee/egui/", branch = "winit-update", features = [
  "winit",
] }
egui-winit = { git = "https://github.com/ArthurBrussee/egui/", branch = "winit-update", default-features = false, features = [
  "android-native-activity",
] }
# egui_demo_lib = "0.22"
jni = { version = "0.21.1", features = ["invocation"] }
once_cell = "1.19.0"
reqwest = { version = "0.12.5", default-features = false, features = [
  "rustls-tls-webpki-roots",
] }

geph5-client-gui = { path = "../geph5-client-gui" }
smolscale = "0.4.7"
tracing = "0.1.40"
ndk-context = "0.1.1"
anyhow = "1.0.86"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.0"

[features]
default = []
desktop = []

[lib]
name = "na_egui"
crate_type = ["cdylib"]

[[bin]]
path = "src/lib.rs"
name = "egui-test"
required-features = ["desktop"]
