[package]
name = "geph5-client-android"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4"
pollster = "0.4.0"
# winit = { git = "https://github.com/xorgy/winit", branch = "basic-keyboard-show-hide" }
# For some reason logging within the egui crate isn't working, even with
# the log feature. Maybe the android_logger crate is broken?
egui = "0.30.0"
egui-winit = { version = "0.30.0", default-features = false, features = [
    "android-native-activity",
] }
# egui_demo_lib = "0.22"
jni = { version = "0.21.1", features = ["invocation"] }
once_cell = "1.20.2"
reqwest = { version = "0.12.9", default-features = false, features = [
    "rustls-tls-webpki-roots",
] }

geph5-client-gui = { path = "../geph5-client-gui" }
smolscale = "0.4.11"
tracing = "0.1.41"
ndk-context = "0.1.1"
anyhow = "1.0.95"
eframe = { version = "0.30", features = [
    "android-native-activity",
    "wgpu",
], default-features = false }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11.6"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"

[features]
default = []
desktop = []

[lib]
name = "na_egui"
crate-type = ["cdylib"]

[[bin]]
path = "src/lib.rs"
name = "egui-test"
required-features = ["desktop"]
