[package]
name = "geph5-client-android"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
pollster = "0.4"
# For some reason logging within the egui crate isn't working, even with
# the log feature. Maybe the android_logger crate is broken?
egui = "0.31"
egui-winit = { version = "0.31", features = ["android-native-activity"] }
egui_extras = { version = "0.31.0", features = ["image"] }
jni = { version = "0.21.1", features = ["invocation"] }
once_cell = "1.20.3"
reqwest = { version = "0.12.12", default-features = false, features = [
  "rustls-tls-webpki-roots",
] }

geph5-client-gui = { path = "../geph5-client-gui" }
smolscale = "0.4.15"
tracing = "0.1.41"
ndk-context = "0.1.1"
anyhow = "1.0.96"
eframe = { version = "0.31", features = ["android-native-activity"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11.6"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"

[features]
default = []
desktop = []

[lib]
crate-type = ["cdylib"]

[[bin]]
path = "src/lib.rs"
name = "egui-test"
required-features = ["desktop"]
