[package]
name = "geph5-client-cli"
edition = "2024"
license = "MPL-2.0"
description = "Mullvad-like command-line client and supervising daemon for Geph5"
version.workspace = true
repository.workspace = true

[[bin]]
name = "geph"
path = "src/main.rs"

[dependencies]
geph5-client = { version = "0.2", path = "../geph5-client" }
geph5-broker-protocol = { version = "0.2", path = "../../libraries/geph5-broker-protocol" }
geph5-misc-rpc = { version = "0.2", path = "../../libraries/geph5-misc-rpc" }

nanorpc = "0.1.13"
nanorpc-sillad = { version = "0.1", path = "../../libraries/nanorpc-sillad" }
sillad = { version = "0.2.10", path = "../../libraries/sillad" }

anyhow = "1.0.102"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
isocountry = "0.3.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
smol = "2.0.2"
smolscale = "0.4.16"
thiserror = "1.0.69"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
