[package]
name = "geph5-client-gui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.86"
csv = "1.3.0"
dirs = "5.0.1"
eframe = { version = "0.27.2", default-features = false, features = [
  "wgpu",
  "x11",
] }
egui = "0.27.2"
moka = { version = "0.12.7", features = ["sync"] }
native-dialog = "0.7.0"
serde = { version = "1", features = ["derive"] }
once_cell = "1.19.0"
smol_str = { version = "0.2.2", features = ["serde"] }
tap = "1.0.1"
geph5-client = { path = "../geph5-client" }
poll-promise = "0.3.0"
smolscale = "0.4.4"
futures-util = "0.3.30"
smol = "2.0.0"
geph5-broker-protocol = { path = "../../libraries/geph5-broker-protocol" }
serde_yaml = "0.9.34"
smol-timeout = "0.6.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = "1.0.117"
oneshot = "0.1.6"
chrono = "0.4.38"
http = "1.1.0"
isocountry = "0.3.2"
image = { version = "0.25.1", default-features = false, features = ["ico"] }
itertools = "0.13.0"

[build-dependencies]
winresource = "0.1"


[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
winapi = { version = "0.3.9", features = ["wininet"] }
