[package]
name = "geph5-client-gui"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "GUI client for Geph"

[package.metadata.bundle]
name = "Geph5"
identifier = "io.geph.geph5"
icon = ["icon.png"]

[dependencies]
anyhow = "1.0.86"
csv = "1.3.0"
# dirs = "5.0.1"
eframe = { version = "0.28.1" }
egui = "0.28.1"
moka = { version = "0.12.7", features = ["sync"] }
arc-writer = { path = "../../libraries/arc-writer" }
serde = { version = "1", features = ["derive"] }
once_cell = "1.19.0"
smol_str = { version = "0.2.2", features = ["serde"] } 
tap = "1.0.1"
geph5-client = { path = "../geph5-client", features = ["windivert"] }
poll-promise = "0.3.0"
smolscale = "0.4.7"
futures-util = "0.3.30"
smol = "2.0.0"
geph5-broker-protocol = { path = "../../libraries/geph5-broker-protocol" }
serde_yaml = "0.9.34"
smol-timeout = "0.6.0"
tracing = "0.1.40"
tracing-subscriber = {version="0.3.18", features=["json"]}
serde_json = "1.0.120"
oneshot = "0.1.8"
chrono = "0.4.38"
http = "1.1.0"
isocountry = "0.3.2"
image = { version = "0.25.1", default-features = false, features = ["ico"] }
itertools = "0.13.0"

elevated-command = "1.1.2"
egui_plot = "0.28.1"
runas = "1.2.0"
egui_extras = { version = "0.28.1", features = ["all_loaders"] }
base32 = "0.5.0"
rlimit = "0.10.1"
binary-search = "0.1.2"

nanorpc-sillad = { path = "../../libraries/nanorpc-sillad" }
sillad = { path = "../../libraries/sillad" }
app_dirs2 = "2.5.5"
strip-ansi-escapes = "0.2.0"

[build-dependencies]
winresource = "0.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
single-instance = "0.3.3"
native-dialog = "0.7.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
winapi = { version = "0.3.9", features = ["wininet"] }
