[package]
name = "geph5-client-gui"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "GUI client for Geph"

[package.metadata.bundle]
name = "Geph5"
identifier = "io.geph.geph5"
icon = ["icon.png"]

[dependencies]
anyhow = "1.0.95"
csv = "1.3.1"
# dirs = "5.0.1"
eframe = "0.30.0"
egui = "0.30.0"
moka = { version = "0.12.8", features = ["sync"] }
arc-writer = { path = "../../libraries/arc-writer" }
serde = { version = "1", features = ["derive"] }
once_cell = "1.20.2"
smol_str = { version = "0.3.2", features = ["serde"] } 
tap = "1.0.1"
geph5-client = { path = "../geph5-client", features = ["windivert"] }
poll-promise = "0.3.0"
smolscale = "0.4.11"
futures-util = "0.3.31"
smol = "2.0.2"
geph5-broker-protocol = { path = "../../libraries/geph5-broker-protocol" }
serde_yaml = "0.9.34"
smol-timeout2 = "0.6.1"
tracing = "0.1.41"
tracing-subscriber = {version="0.3.19", features=["json"]}
serde_json = "1.0.134"
oneshot = "0.1.8"
chrono = "0.4.39"
http = "1.2.0" 
isocountry = "0.3.2"
image = { version = "0.25.5", default-features = false, features = ["ico"] }
itertools = "0.13.0"

elevated-command = "1.1.2"
egui_plot = "0.30.0"
runas = "1.2.0"
egui_extras = { version = "0.30.0", features = ["all_loaders"] }
base32 = "0.5.1"
rlimit = "0.10.2"
binary-search = "0.1.2"

nanorpc-sillad = { path = "../../libraries/nanorpc-sillad" }
sillad = { path = "../../libraries/sillad" }
app_dirs2 = "2.5.5"
strip-ansi-escapes = "0.2.0"

[build-dependencies]
winresource = "0.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
single-instance = "0.3.3"
native-dialog = "0.7.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
winapi = { version = "0.3.9", features = ["wininet"] }
