[package]
name = "geph5-exit"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
geph5-broker-protocol = { path = "../../libraries/geph5-broker-protocol" }
sillad = { path = "../../libraries/sillad" }
sillad-sosistab3 = { path = "../../libraries/sillad-sosistab3" }
sillad-conntest = { path = "../../libraries/sillad-conntest" }
sillad-native-tls = { path = "../../libraries/sillad-native-tls" }
picomux = { path = "../../libraries/picomux" }
async-trait = "0.1.80"
nanorpc = "0.1.12"
thiserror = "1.0.61"
smolscale = "0.4.15"
futures-util = "0.3.30"
async-io = "2.3.3"
once_cell = "1.19.0"
serde = "1.0.204"
serde_json = "1.0.120"
serde_yaml = "0.9.34"
anyhow = "1.0.86"
tracing = "0.1.40"
smol = "2.0.0"
rand = "0.8.5"
reqwest = { version = "0.12.5", default-features = false, features = [
  "rustls-tls",
] }
isocountry = "0.3.2"
ed25519-dalek = {version="2", default-features=false, features=["serde"]}
blake3 = "1.5.1"
tracing-subscriber = "0.3.18"
tap = "1.0.1"
geph5-misc-rpc = { path = "../../libraries/geph5-misc-rpc" }
stdcode = "0.1.14"
x25519-dalek = {version="2", default-features=false, features=["serde"]}
hex = "0.4.3"
nursery_macro = "0.1.0"
moka = { version = "0.12.7", features = ["future"] }
mizaru2 = { path = "../../libraries/mizaru2" }
governor = "0.6.3"
quanta = "0.12.3"
sysinfo = "0.30.12"
atomic_float = "1.0.0"
fastrand = "2.1.0"
tachyonix = "0.3.0"
clap = { version = "4.5.8", features = ["derive"] }
smol-timeout2 = "0.6.1"
flate2 = "1.0.33"
async-io-bufpool = "0.2"

tikv-jemallocator = "0.6"
threadpool = "1.8.1"
oneshot = "0.1.8"
bytes = "1.8.0"
simple-dns = "0.9.0"
dashmap = "6.1.0"
globset = "0.4.15"
crossbeam-queue = "0.3.12"
scopeguard = "1.2.0"
async-event = "0.2.1"
ipnet = "2.10.1"
socket2 = "0.5.8"
serde_with = "3.12.0"
futures-concurrency = "7.6.2"
async-native-tls = "0.5.0"
rcgen = "0.13.2"
time = "0.3.37"
native-tls = "0.2.13"
