[package]
name = "geph5-exit"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
geph5-ip-to-asn = { path = "../../libraries/geph5-ip-to-asn" }
geph5-broker-protocol = { path = "../../libraries/geph5-broker-protocol" }
sillad = { path = "../../libraries/sillad" }
sillad-sosistab3 = { path = "../../libraries/sillad-sosistab3" }
sillad-conntest = { path = "../../libraries/sillad-conntest" }
sillad-native-tls = { path = "../../libraries/sillad-native-tls" }
sillad-hex = { path = "../../libraries/sillad-hex" }
sillad-meeklike = { path = "../../libraries/sillad-meeklike" }
picomux = { path = "../../libraries/picomux" }
async-trait = "0.1.88"
nanorpc = "0.1.13"
thiserror = "1.0.69"
smolscale = "0.4.16"
futures-util = "0.3.31"
async-io = "2.5.0"
once_cell = "1.21.3"
serde = "1.0.219"
serde_json = "1.0.141"
serde_yaml = "0.9.34"
anyhow = "1.0.98"
tracing = "0.1.41"
smol = "2.0.2"
rand = "0.8.5"
reqwest = { version = "0.12.22", default-features = false, features = [
  "rustls-tls",
  "http2",
] }
isocountry = "0.3.2"
ed25519-dalek = { version = "2", default-features = false, features = [
  "serde",
] }
blake3 = "1.8.2"
tracing-subscriber = "0.3.19"
tap = "1.0.1"
derive_more = "=2.0.1"
geph5-misc-rpc = { path = "../../libraries/geph5-misc-rpc" }
stdcode = "0.1.14"
x25519-dalek = { version = "2", default-features = false, features = ["serde"] }
hex = "0.4.3"
nursery_macro = "0.1.0"
moka = { version = "0.12.10", features = ["future"] }
mizaru2 = { path = "../../libraries/mizaru2" }
governor = "0.6.3"
quanta = "0.12.6"
sysinfo = "0.30.13"
atomic_float = "1.1.0"
fastrand = "2.3.0"
tachyonix = "0.3.1"
clap = { version = "4.5.41", features = ["derive"] }
smol-timeout2 = "0.6.1"
flate2 = "1.1.2"
async-io-bufpool = "0.2"

tikv-jemallocator = "0.6"
threadpool = "1.8.1"
oneshot = "0.1.11"
bytes = "1.11.1"
simple-dns = "0.9.3"
dashmap = "6.1.0"
globset = "0.4.16"
crossbeam-queue = "0.3.12"
scopeguard = "1.2.0"
async-event = "0.2.1"
ipnet = "2.11.0"
socket2 = "0.5.10"
serde_with = "3.14.0"
futures-concurrency = "7.6.3"
async-native-tls = "0.5.0"
rcgen = "0.13.2"
time = "0.3.41"
native-tls = "0.2.14"
base64 = "0.22.1"
