[package]
name = "geph5-exit"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
geph5-ip-to-asn = { path = "../../libraries/geph5-ip-to-asn" }
geph5-broker-protocol = { path = "../../libraries/geph5-broker-protocol" }
sillad = { path = "../../libraries/sillad" }
sillad-sosistab3 = { path = "../../libraries/sillad-sosistab3" }
sillad-conntest = { path = "../../libraries/sillad-conntest" }
sillad-native-tls = { path = "../../libraries/sillad-native-tls" }
sillad-hex = { path = "../../libraries/sillad-hex" }
sillad-meeklike = { path = "../../libraries/sillad-meeklike" }
picomux = { path = "../../libraries/picomux" }
async-trait = "0.1.89"
nanorpc = "0.1.13"
thiserror = "1.0.69"
smolscale = "0.4.16"
futures-util = "0.3.32"
async-io = "2.6.0"
once_cell = "1.21.4"
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
anyhow = "1.0.102"
tracing = "0.1.44"
smol = "2.0.2"
rand = "0.8.6"
libc = "0.2"
reqwest = { version = "0.12.28", default-features = false, features = [
  "rustls-tls",
  "http2",
] }
isocountry = "0.3.2"
ed25519-dalek = { version = "2", default-features = false, features = [
  "serde",
] }
blake3 = "1.8.5"
tracing-subscriber = "0.3.23"
tap = "1.0.1"
derive_more = "=2.0.1"
geph5-misc-rpc = { path = "../../libraries/geph5-misc-rpc" }
stdcode = "0.1.14"
x25519-dalek = { version = "2", default-features = false, features = ["serde"] }
hex = "0.4.3"
nursery_macro = "0.1.0"
moka = { version = "0.12.15", features = ["future"] }
mizaru2 = { path = "../../libraries/mizaru2" }
governor = "0.6.3"
quanta = "0.12.6"
sysinfo = "0.30.13"
atomic_float = "1.1.0"
fastrand = "2.4.1"
tachyonix = "0.3.1"
clap = { version = "4.6.1", features = ["derive"] }
smol-timeout2 = "0.6.1"
flate2 = "1.1.9"
async-io-bufpool = "0.2"

tikv-jemallocator = "0.6"
threadpool = "1.8.1"
oneshot = "0.1.13"
bytes = "1.11.1"
simple-dns = "0.9.3"
dashmap = "6.1.0"
globset = "0.4.18"
crossbeam-queue = "0.3.12"
scopeguard = "1.2.0"
async-event = "0.2.1"
ipnet = "2.12.0"
socket2 = "0.5.10"
serde_with = "3.18.0"
futures-concurrency = "7.7.1"
async-native-tls = "0.5.0"
rcgen = "0.13.2"
time = "0.3.47"
native-tls = "0.2.18"
base64 = "0.22.1"
