[package]
name = "geph5-prototest"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0.86"
argh = "0.1.13"
async-event = "0.2.1"
async-io = "2.3.3"
async-io-bufpool = "0.2"
async-native-tls = "0.5.0"
async-trait = "0.1.80"
atomic_float = "1.0.0"
blake3 = "1.5.1"
bytes = "1.8.0"
clap = { version = "4.5.8", features = ["derive"] }
crossbeam-queue = "0.3.12"
dashmap = "6.1.0"
fastrand = "2.1.0"
futures-concurrency = "7.6.2"
futures-util = "0.3.30"
hex = "0.4.3"
native-tls = "0.2.13"
once_cell = "1.19.0"
oneshot = "0.1.8"
picomux = { path = "../../libraries/picomux" }
rand = "0.8.5"
rcgen = "0.13.2"
scopeguard = "1.2.0"
serde = "1.0.204"
serde_json = "1.0.120"
sillad = { path = "../../libraries/sillad" }
sillad-conntest = { path = "../../libraries/sillad-conntest" }
sillad-native-tls = { path = "../../libraries/sillad-native-tls" }
sillad-sosistab3 = { path = "../../libraries/sillad-sosistab3" }
smol = "2.0.0"
smol-timeout2 = "0.6.1"
smolscale = "0.4.15"
socket2 = "0.5.8"
tachyonix = "0.3.0"
tap = "1.0.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
x25519-dalek = {version="2", default-features=false, features=["serde"]}
